<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.rilixtech.clickabletextview.MainActivity">
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >


    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/text_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_string_1"
        android:textSize="18sp"
        android:padding="15dp"
        />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/text_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_string_2"
        android:layout_below="@+id/text_one"
        android:textSize="18sp"
        android:padding="15dp"
        />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/text_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_string_3"
        android:layout_below="@+id/text_two"
        android:textSize="18sp"
        android:padding="15dp"
        android:autoLink="all"
        />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/text_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_string_4"
        android:layout_below="@+id/text_three"
        android:textSize="18sp"
        android:padding="15dp"
        android:autoLink="all"
        />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/text_five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_string_5"
        android:layout_below="@+id/text_four"
        android:textSize="18sp"
        android:padding="15dp"
        android:linksClickable="true"
        />
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/text_six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_string_6"
        android:layout_below="@+id/text_five"
        android:textSize="18sp"
        android:padding="15dp"
        android:linksClickable="true"
        />
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/text_seven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_string_7"
        android:layout_below="@+id/text_six"
        android:textSize="18sp"
        android:padding="15dp"
        android:clickable="true"
        android:linksClickable="true"
        />
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/text_eight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_string_8"
        android:layout_below="@+id/text_seven"
        android:textSize="18sp"
        android:padding="15dp"
        android:clickable="true"
        android:linksClickable="true"
        />
  </RelativeLayout>
</ScrollView>

